samples/_failures_safe/1760887128_bfa20a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9fb4b3e.c: In function ‘main’:
./samples/SAFE/__tmp_a9fb4b3e.c:145:35: error: missing terminating " character
  145 |         } else if (strcmp(choice, "2
      |                                   ^~
./samples/SAFE/__tmp_a9fb4b3e.c:145:9: error: expected expression at end of input
  145 |         } else if (strcmp(choice, "2
      |         ^
./samples/SAFE/__tmp_a9fb4b3e.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a9fb4b3e.c:145:9: error: expected declaration or statement at end of input
